# sato

./: .gitignore  ARCHITECTURE.md  BUILD  CONTRIBUTING.md  MODULE.bazel  QUICKSTART.md  README.md  STATUS.md  WORKSPACE
bazel/: BUILD  proto_ros.bzl
docs/: NESTED_MESSAGES.md
examples/: BUILD  nested.proto  robot.proto  usage_example.cc
plugin/: BUILD  main.cc  ros_generator.cc  ros_generator.h
sato/: BUILD.bazel  sato_basic_test.cc  sato_library.bzl  sato_proto_library.bzl  sato_test.cc
sato/compiler/: BUILD.bazel  enum_gen.cc  enum_gen.h  gen.cc  gen.h  main.cc  message_gen.cc  message_gen.h  zip_utils.cc  zip_utils.h
sato/runtime/: BUILD.bazel  any.h  fields.h  iterators.h  message.cc  message.h  message_test.cc  mux.cc  mux.h  phaser_bank.cc  phaser_bank.h  protobuf.h  ros.h  runtime.h  sato_bank.h  union.h  vectors.h
sato/testdata/: BUILD  TestMessage.proto
sato/testdata/std_msgs/msg/: Header.msg
test/: BUILD  converter_test.cc
