module(
    name = "phaser",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "local_repository")

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "abseil-cpp", version = "20230802.0", repo_name = "com_google_absl")
bazel_dep(name = "googletest", version = "1.14.0", repo_name = "com_google_googletest")

# Note, see https://github.com/bazelbuild/bazel/issues/19973
# Protobuf must be aliased as "com_google_protobuf" to match implicit dependency within bazel_tools.
bazel_dep(name = "protobuf", version = "21.7", repo_name = "com_google_protobuf")

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "zlib", version = "1.3.1.bcr.3")

bazel_dep(name = "libzip", version = "1.11.4.bcr.1")

http_archive(
    name = "toolbelt",
    integrity = "sha256-RwYojmkQeMEBe/jDW1BR9BTdGa0CVcxne46X9Qdxvh0=",
    strip_prefix = "cpp_toolbelt-1.2.9",
    urls = ["https://github.com/dallison/cpp_toolbelt/archive/refs/tags/1.2.9.tar.gz"],
)

# For local debugging of toolbelt coroutine library.
# local_repository(
#     name = "toolbelt",
#     path = "../cpp_toolbelt",
# )

# Coroutines
http_archive(
    name = "coroutines",
    integrity = "sha256-cJ3a89VebabjRgLjHNsEsjIQE+hi+5vdtuAh4RfTXCI=",
    strip_prefix = "co-1.3.7",
    urls = ["https://github.com/dallison/co/archive/refs/tags/1.3.7.tar.gz"],
)

# For local debugging of co coroutine library.
# local_repository(
#     name = "coroutines",
#     path = "../co",
# )

# http_archive(
#   name = "neutron",
#   urls = ["https://github.com/dallison/neutron/archive/refs/tags/1.0.3.tar.gz"],
#   strip_prefix = "neutron-1.0.3",
#   integrity = "sha256-XNpB6mZSbpctyRSLXNMgw7KroXLplZdQzTZRs+LwzG8="
# )

# For local debugging of neutron library.
bazel_dep(name = "neutron")
local_path_override(
   module_name = "neutron",
   path = "../neutron",
)

